# QT-Deployment-Series

./: .gitignore  CMakeLists.txt  README.md  main.qml
deployment/: control  deployment.json.in  deployment.sh.in  postinst  prerm
